[package]
name = "rspanphon"
version = "0.1.0"
edition = "2018"
authors = ["David R. Mortensen <dmortens@cs.cmu.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rspanphon"
path = "src/lib.rs"

[[bin]]
name = "rspanphon"
path = "src/main.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cached = "0.26.2"
