[package]
name = "rspanphon"
version = "0.1.0"
edition = "2018"
authors = ["David R. Mortensen <dmortens@cs.cmu.edu>"]
rust-version = "1.55.0"
description="rsPanPhon, a rough Rust port of the Python PanPhon library, extracts articulatory features from IPA strings and implements operations on them."
readme="README.md"
repository="https://github.com/dmort27/rspanphon"
license="MIT"
license-file="LICENSE"
keywords=["NLP", "linguistics", "phonology", "phonological", "phoneme", "articulatory", "distance"]

[lib]
name = "rspanphon"
path = "src/lib.rs"

[[bin]]
name = "rspanphon"
path = "src/main.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cached = "0.26.2"
